<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/onezero"
        android:background="@drawable/bg_border_gray_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/onezero"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorBlue"
                android:textSize="@dimen/onesix"
                style="@style/font_bold"
                android:text="@string/app_name"/>


            <TextView
                android:id="@+id/textMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/onefive"
                android:textColor="@color/black"
                android:textSize="@dimen/onefour"
                style="@style/font_regular"
                android:text="@string/app_name"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/twozero"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonCancel"
                    android:layout_width="@dimen/onezerozero"
                    android:layout_height="@dimen/threefive"
                    android:background="@drawable/button_grey_10"
                    android:text="@string/cancel"
                    android:layout_marginEnd="@dimen/onezero"
                    android:stateListAnimator="@null"
                    android:textSize="@dimen/onetwo"
                    android:textAllCaps="false"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/white"
                    style="@style/font_bold"/>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonOk"
                    android:layout_width="@dimen/onezerozero"
                    android:layout_height="@dimen/threefive"
                    android:background="@drawable/button_blue_grey_10"
                    android:text="@string/ok"
                    android:layout_marginStart="@dimen/onezero"
                    android:stateListAnimator="@null"
                    android:textSize="@dimen/onetwo"
                    android:textAllCaps="false"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/white"
                    style="@style/font_bold"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>